--- a/test/fixtures/documents.yml
+++ b/test/fixtures/documents.yml
@@ -1,8 +1,14 @@
 one:
   content: "Ruby is a dynamic programming language"
+  embedding: [0.1, 0.2, 0.3]
+  index_status: completed
 
 two:
   content: "Python is great for data science"
+  embedding: [0.4, 0.5, 0.6]
+  index_status: completed
 
 three:
   content: "JavaScript runs in the browser"
+  embedding: [0.7, 0.8, 0.9]
+  index_status: completed
